--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,8 @@
-FROM Node: 18-alpine
-RUN /app
+
+FROM node:18
 WORKDIR /app
+COPY package.json .
+RUN npm install
 COPY . .
 EXPOSE 3000
 CMD ["npm", "run", "dev"]
